--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "vite-plugin-vue-devtools": "^7.6.7",
     "vue": "^3.5.13"
   },
